# Synapse-project

./: .gitignore  CHANGELOG.md  README.md  SETTING.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/routers/: ai.py  memory.py
backend/app/schemas/: ai.py  memory.py
backend/app/services/: mcp_tools.py  openai_service.py  record_service.py  search_service.py  supabase_service.py  vectorize_service.py
docs/: BACKEND_SETUP_GUIDE.md  PLAN.md  backend_implementation_plan.md  functional_spec.md  metadata_changes.md  session_architecture.md
docs/1_planning/: Project_Planning_Document.md
docs/2_architecture/: Backend_API_Specification.md  Database_Schema_Design.md  architecture.md  metadata_changes.md
docs/3_features/: Feature1_Multimodal_RAG_Pipeline.md  Feature2_Agentic_Routing_Semantic_Search.md  Feature3_Threaded_Conversation.md
docs/5_guides_and_trouble/: image_upload_troubleshooting.md
frontend/: debug-scroll.js  index.html  package-lock.json  package.json  test-scroll.html  vite.config.js
frontend/src/: App.js  main.css  main.js  main.old.css
frontend/src/components/: CameraButton.js  ChatBubbles.js  ChatInput.js  ChatInput.old.js  Header.js  ImageModal.js  LibraryScreen.js  LoadingSpinner.js  LoginScreen.js  LogoutDropdown.js  MobileHeader.js  RelatedMemoriesPanel.js  Sidebar.js  ThreadPanel.js  Toast.js  UserAvatar.js
frontend/src/core/: index.js
frontend/src/routes/: ChatHistory.js  Home.js  Library.js  LibraryDetail.js  index.js
frontend/src/services/: geocoding.js  openai.js  (+1 more)
(+9 files in other folders)
